# SIP-phone

./: ReadMe.txt  buildall.sh  target_baresip_install.sh
WebRTC_AEC/: AUTHORS  Makefile  Makefile.in  NEWS  README  aarch64-poky-linux-libtool  aclocal.m4  build.sh  config.status  configure  configure.ac
WebRTC_AEC/autom4te.cache/: output.0  output.1  output.3  output.4  requests  traces.1  traces.2  traces.3  traces.4
WebRTC_AEC/sample/AEC3_Client/: AEC3Client.cc  Makefile  Makefile.am  Makefile.in  mapfile
WebRTC_AEC/sample/AEC3_Client/.deps/: AEC3Client.Po
WebRTC_AEC/sample/AEC3_Demo/: AEC3Demo.cc  Makefile  Makefile.am  Makefile.in  mapfile
WebRTC_AEC/sample/AEC3_Demo/.deps/: AEC3Demo.Po
WebRTC_AEC/sample/AEC3_Server/: AEC3Server.cc  ALSA.h  Makefile  Makefile.am  Makefile.in  mapfile
WebRTC_AEC/sample/AEC3_Server/.deps/: AEC3Server.Po  ALSA.Po
WebRTC_AEC/sample/AECM_Client/: AECMClient  AECMClient.cc  ALSA..c  ALSA.c  Makefile  Makefile.am  Makefile.in  mapfile
WebRTC_AEC/sample/AECM_Client/.deps/: AECMClient.Po
WebRTC_AEC/sample/AECM_Demo/: AECMDemo  AECMDemo.cc  ALSA._bak_c  Makefile  Makefile.am  Makefile.in  mapfile
WebRTC_AEC/sample/AECM_Demo/.deps/: AECMDemo.Po
WebRTC_AEC/sample/AECM_Server/: AECMServer  AECMServer.cc  Makefile  Makefile.am  Makefile.in  mapfile
WebRTC_AEC/sample/AECM_Server/.deps/: AECMServer.Po
WebRTC_AEC/src/: Makefile  Makefile.am  Makefile.in
WebRTC_AEC/src/api/audio/.deps/: echo_canceller3_config.Plo  echo_canceller3_factory.Plo  libwebrtc_aec_la-echo_canceller3_config.Plo  libwebrtc_aec_la-echo_canceller3_factory.Plo
WebRTC_AEC/src/common_audio/.deps/: audio_util.Plo  channel_buffer.Plo  libwebrtc_aec_la-audio_util.Plo  libwebrtc_aec_la-channel_buffer.Plo  libwebrtc_aec_la-ring_buffer.Plo
WebRTC_AEC/src/common_audio/resampler/.deps/: libwebrtc_aec_la-push_sinc_resampler.Plo  libwebrtc_aec_la-sinc_resampler.Plo  push_sinc_resampler.Plo  sinc_resampler.Plo
WebRTC_AEC/src/common_audio/signal_processing/.deps/: dot_product_with_scale.Plo  libwebrtc_aec_la-complex_bit_reverse.Plo  libwebrtc_aec_la-complex_fft.Plo  libwebrtc_aec_la-cross_correlation.Plo  libwebrtc_aec_la-division_operations.Plo  libwebrtc_aec_la-dot_product_with_scale.Plo  libwebrtc_aec_la-downsample_fast.Plo  libwebrtc_aec_la-min_max_operations.Plo  libwebrtc_aec_la-randomization_functions.Plo  libwebrtc_aec_la-real_fft.Plo  libwebrtc_aec_la-spl_init.Plo  libwebrtc_aec_la-splitting_filter.Plo  libwebrtc_aec_la-vector_scaling_operations.Plo
WebRTC_AEC/src/modules/audio_processing/.deps/: audio_buffer.Plo  high_pass_filter.Plo  libwebrtc_aec_la-audio_buffer.Plo  libwebrtc_aec_la-high_pass_filter.Plo  libwebrtc_aec_la-splitting_filter.Plo  libwebrtc_aec_la-three_band_filter_bank.Plo  splitting_filter.Plo  three_band_filter_bank.Plo
WebRTC_AEC/src/modules/audio_processing/aec3/.deps/: adaptive_fir_filter.Plo  adaptive_fir_filter_erl.Plo  aec3_common.Plo  aec3_fft.Plo  aec_state.Plo  alignment_mixer.Plo  api_call_jitter_metrics.Plo  block_buffer.Plo  block_delay_buffer.Plo  block_framer.Plo  block_processor.Plo  block_processor_metrics.Plo  clockdrift_detector.Plo  coarse_filter_update_gain.Plo  comfort_noise_generator.Plo  decimator.Plo  dominant_nearend_detector.Plo  downsampled_render_buffer.Plo  echo_audibility.Plo  echo_canceller3.Plo  echo_path_delay_estimator.Plo  echo_path_variability.Plo  echo_remover.Plo  echo_remover_metrics.Plo  erl_estimator.Plo  erle_estimator.Plo  fft_buffer.Plo  filter_analyzer.Plo  frame_blocker.Plo  fullband_erle_estimator.Plo  libwebrtc_aec_la-adaptive_fir_filter.Plo  libwebrtc_aec_la-adaptive_fir_filter_erl.Plo  libwebrtc_aec_la-aec3_common.Plo  libwebrtc_aec_la-aec3_fft.Plo  libwebrtc_aec_la-aec_state.Plo  libwebrtc_aec_la-alignment_mixer.Plo  libwebrtc_aec_la-api_call_jitter_metrics.Plo  libwebrtc_aec_la-block_buffer.Plo  libwebrtc_aec_la-block_delay_buffer.Plo  libwebrtc_aec_la-block_framer.Plo  (+70 more)
WebRTC_AEC/src/modules/audio_processing/aecm/.deps/: aecm_core.Plo  aecm_core_c.Plo  echo_control_mobile.Plo  libwebrtc_aec_la-aecm_core.Plo  libwebrtc_aec_la-aecm_core_c.Plo  libwebrtc_aec_la-echo_control_mobile.Plo
WebRTC_AEC/src/modules/audio_processing/include/.deps/: audio_processing.Plo  audio_processing_statistics.Plo  config.Plo  libwebrtc_aec_la-audio_processing.Plo  libwebrtc_aec_la-audio_processing_statistics.Plo  libwebrtc_aec_la-config.Plo
WebRTC_AEC/src/modules/audio_processing/logging/.deps/: apm_data_dumper.Plo  libwebrtc_aec_la-apm_data_dumper.Plo
WebRTC_AEC/src/rtc_base/: platform_thread_types.cc
WebRTC_AEC/src/rtc_base/.deps/: checks.Plo  libwebrtc_aec_la-checks.Plo  libwebrtc_aec_la-logging.Plo  libwebrtc_aec_la-platform_thread_types.Plo  libwebrtc_aec_la-race_checker.Plo  libwebrtc_aec_la-string_encode.Plo  libwebrtc_aec_la-string_to_number.Plo  libwebrtc_aec_la-string_utils.Plo  libwebrtc_aec_la-system_time.Plo  libwebrtc_aec_la-time_utils.Plo  logging.Plo  platform_thread_types.Plo  race_checker.Plo  string_encode.Plo  string_to_number.Plo  string_utils.Plo  system_time.Plo  time_utils.Plo
WebRTC_AEC/src/rtc_base/experiments/.deps/: field_trial_parser.Plo  libwebrtc_aec_la-field_trial_parser.Plo
WebRTC_AEC/src/rtc_base/memory/.deps/: aligned_malloc.Plo  libwebrtc_aec_la-aligned_malloc.Plo
WebRTC_AEC/src/rtc_base/strings/.deps/: libwebrtc_aec_la-string_builder.Plo  string_builder.Plo
WebRTC_AEC/src/rtc_base/synchronization/.deps/: libwebrtc_aec_la-mutex.Plo  libwebrtc_aec_la-yield.Plo  mutex.Plo  yield.Plo
WebRTC_AEC/src/rtc_base/system/.deps/: file_wrapper.Plo  libwebrtc_aec_la-file_wrapper.Plo
WebRTC_AEC/src/system_wrappers/source/.deps/: field_trial.Plo  libwebrtc_aec_la-field_trial.Plo  libwebrtc_aec_la-metrics.Plo  metrics.Plo
baresip/: Makefile  build.sh
phone_gui/: CMakeLists.txt  ReadMe.txt  dcfb.h  dialog_dial.cpp  dialog_dial.h  dialog_dial.ui  dialog_incoming.cpp  dialog_incoming.h  dialog_incoming.ui  ipc_baresip.cpp  ipc_baresip.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  window_oncall.cpp  window_oncall.h  window_oncall.ui
(+210 files in other folders)
