dnl Process this file with autoconf to product a configure scripe.

AC_PREREQ(2.59)
AC_INIT(WebRTC_AEC, 1.0)

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([1.11 subdir-objects])

AC_PROG_LIBTOOL

AM_PROG_AS
AC_C_INLINE
AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_FILES(Makefile
		src/Makefile
		sample/AEC3_Demo/Makefile
		sample/AEC3_Client/Makefile
		sample/AEC3_Server/Makefile
		sample/AECM_Demo/Makefile
		sample/AECM_Client/Makefile
		sample/AECM_Server/Makefile)
		
AC_OUTPUT
